--- a/form.html
+++ b/form.html
@@ -22,6 +22,7 @@
       .myform {
         border: 2px solid #000;
         padding: 5px;
+        margin-top: 50vw;
       }
       .input{
           padding:10px;
@@ -40,7 +41,7 @@
     <form method="post" action="" class="myform">
       <div class= "input">
         <label for="fldSearch">Keywords</label>
-        <input type="search" id="fldSearch" name="keywords">
+        <input type="search" id="fldSearch" name="keywords" width="200px">
         <input class="color" type="submit" name="btnSubmit" value="Search"></div>
     </form>
 
